--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <h1 class="title-t2">2023 신년계획</h1>
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center">바디 프로필 찍기</div>
+        <div class="bucket img1-t2 center">몸무게 감량하기</div>
         <div class="bucket img2-t2 center">1달에 1권 이상 책 읽기</div>
         <div class="bucket img2-t2 center">영어 공부하기</div>
         <div class="bucket img1-t2 center">자격증 취득하기</div>
-        <div class="bucket img1-t2 center">하루 물 1.5L이상 마시기</div>
+        <div class="bucket img1-t2 center done">하루 물 1.5L이상 마시기</div>
         <div class="bucket img2-t2 center">새로운 취미 배우기</div>
 
     </div>
